- RandomNr -> 4 digit int - Jib Auth Added - username Placeholder k8s.yml & build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,10 @@ java {
 
 jib {
     to {
-        image = "docker.io/lehwwmcrnjnhzjaglr/number-gen-kafka"
+        image = "docker.io/${dockerHubUser}/number-gen-kafka"
+        auth {
+            username = dockerHubUser
+            password = dockerHubPassword
+        }
     }
 }
