--- a/k8s.yml
+++ b/k8s.yml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
         - name: "number-gen-kafka"
-          image: "docker.io/lehwwmcrnjnhzjaglr/number-gen-kafka"
+          image: "docker.io/{{DockerHubUserName}}/number-gen-kafka"
           ports:
             - name: http
               containerPort: 8080
