--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,10 @@ dependencies {
     compileOnly("org.projectlombok:lombok")
     runtimeOnly("ch.qos.logback:logback-classic")
     implementation("io.micronaut:micronaut-validation")
-
+    testImplementation("org.awaitility:awaitility:4.1.1")
+    testImplementation("org.testcontainers:spock")
+    testImplementation("org.testcontainers:testcontainers")
+    testImplementation("org.testcontainers:kafka")
 }
 
 application {
